2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (struct comm_msg): Add a size_max member.
	(comm_msg_new): Add a size_max argument.
	* launcher/comm_msg.c: Include <assert.h>.
	(comm_msg_new): Assert that size is <= size_max when size_max is
	in use. Initialize size_max.
	(comm_msg_destroy): Reset size_max.
	(comm_msg_grow): Check for size_max cap.
	* launcher/launcher.c (store_state): Initialize comm_msg cap to 0.
	* launcher/test_msg.c (main): Likewise. Add a test for a capped
	comm_msg.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_pid): Return status value from
	invoked_send_action.
	(invoked_send_exit): Likewise.
	(invoked_send_fake_exit): Return status value from invoked_send_exit.
	* launcher/comm_msg.c (comm_msg_pack_int): Return status value from
	comm_msg_pack_mem.
	(comm_msg_pack_str): Likewise.
	(comm_msg_unpack_int): Check return value from comm_msg_unpack_mem.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/launcher.c (invoked_send_action): New function.
	(invoked_send_pid): Use invoked_send_action instead of single
	invoke_send_msg calls.
	(invoked_send_exit): Likewise.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.c (comm_msg_pack_mem): Get rid of cur variable,
	and change msg->used after having copied the data.
	(comm_msg_unpack_mem): Likewise. Add a check to make sure it does not
	read outside the buffer. Remove error message.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/comm_msg.h (comm_msg_grow): Add a need_size argument.
	(comm_msg_grow): Likewise. Remove implicit end_size calculations.
	Fix all callers.
	(comm_msg_pack_mem): Check comm_msg_grow return code and set
	msg->used after calling it.
	(comm_msg_recv): Likewise.

2008-02-21  Guillem Jover  <guillem.jover@nokia.com>

	* launcher/test_lib.h (test_success): New function declaration.
	(test_failure): Likewise.